# FAV_2324_PC_LSWCompression-Hide_Binary_Data_In_Img

./: CMakeCache.txt  CMakeLists.txt  FAV_PC_SP_23_24_BinaryDataInImg  FAV_PC_SP_23_24_BinaryDataInImg.cbp  Makefile  README.md  cmake_install.cmake
.cmake/api/v1/reply/: cache-v2-e694566bff1fb034ef84.json  cmakeFiles-v1-2f147be2a9c43a5d938c.json  codemodel-v2-e0df4471fe10e834a668.json  index-2024-01-17T15-16-45-0040.json  target-FAV_PC_SP_23_24_BinaryDataInImg-Debug-18a61dc2959c87648dbd.json
data/test_data/test_data_01/: input_payload.txt
data/test_data/test_data_05/: input_payload_100_000.txt  input_payload_1_000_000.txt
doc/: LZW.md  code_practices.md  commands.txt  compression_c_with_chararray.txt  help_file.txt  hodnoceni.md  libpng.txt  otazky_11.11.23.md  test_plan.md  todo.md  validator_errors.txt
doc/archive/: archive.txt  dictionary_c.txt  dictionary_c_before_dicvaluearray_only_one_char.txt  dictionarydictionary_h_before_dicvaluearray_only_one_char.txt
doc/archive/logging_to_file/: logger_c.txt  logger_h.txt
doc/dokumentace/src/: img.tex
doc/final_dokumentace/LaTex/: main.tex
doc/final_dokumentace/v2/LaTex/: main.tex  references.bib
doc/hodnoceni/: hodnoceni.txt
final/v1_0/: Makefile (1).win
final/v1_0/src/: compression.c  image.c  image.h  main.c  payload.c  payload.h
final/v1_0/src/utils/: dictionary.c  (+7 more)
final/v2_0/: Makefile  Makefile.win
final/v2_0/src/: compression.c  compression.h  image.c  main.c  payload.c  payload.h
final/v3_0/: Makefile  callgrind.out.35554
final/v3_0/LaTex/: main.tex
final/v3_0/src/: compression.c  compression.h  image.c  image.h  main.c  payload.c  payload.h
final/v4_0/: Makefile.win
final/v4_0/LaTex/: main.tex
final/v4_0/src/: compression.c  image.c  image.h  main.c  payload.c  payload.h
makefiles/: Makefile.lin  Makefile.win
src/: compress.c  compress.h  compression.c  compression.h  decompress.c  decompress.h  image.c  image.h  logger.c  logger.h  main.c  payload.c  payload.h  payload_prepare.c  payload_prepare.h
src/template/: code.txt  template_c.txt  template_h.txt
src/test/: test_file.c  test_file.h
src/utils/: data_structures.c  data_structures.h  dictionary.c  dictionary.h  list.c  logger.c  logger.h  memory_management.c  memory_management.h  stack.c  stack.h  utils.c  utils.h
test/: test_file.c
test/test/: test_file.c
(+20 files in other folders)
